# rusoto

./: .gitignore  .gitmodules  Cargo.toml  build.rs  build.sh
codegen/src/: botocore.in.rs  lib.rs
credential/: Cargo.toml
implementors/foreign_types/: trait.ForeignType.js  trait.ForeignTypeRef.js
implementors/rusoto/: trait.ProvideAwsCredentials.js
rusoto/: enum.Region.html  fn.default_region.html  fn.default_tls_client.html  index.html  sidebar-items.js  struct.AwsCredentials.html  struct.BaseAutoRefreshingProvider.html  struct.ChainProvider.html  struct.ContainerProvider.html  struct.CredentialsError.html  struct.EnvironmentProvider.html  struct.HttpDispatchError.html  struct.HttpResponse.html  struct.InstanceMetadataProvider.html  struct.ParseRegionError.html  struct.ProfileProvider.html  struct.SignedRequest.html  struct.TlsError.html  trait.DispatchSignedRequest.html  trait.ProvideAwsCredentials.html  type.AutoRefreshingProvider.html  type.AutoRefreshingProviderSync.html  type.DefaultCredentialsProvider.html  type.DefaultCredentialsProviderSync.html
rusoto/acm/: enum.AddTagsToCertificateError.html  enum.DeleteCertificateError.html  enum.DescribeCertificateError.html  enum.GetCertificateError.html  enum.ImportCertificateError.html  enum.ListCertificatesError.html  enum.ListTagsForCertificateError.html  enum.RemoveTagsFromCertificateError.html  enum.RequestCertificateError.html  enum.ResendValidationEmailError.html  index.html  sidebar-items.js  struct.AcmClient.html  struct.AddTagsToCertificateRequest.html  struct.CertificateDetail.html  struct.CertificateSummary.html  struct.DeleteCertificateRequest.html  struct.DescribeCertificateRequest.html  struct.DescribeCertificateResponse.html  struct.DomainValidation.html  struct.DomainValidationOption.html  struct.GetCertificateRequest.html  struct.GetCertificateResponse.html  struct.ImportCertificateRequest.html  struct.ImportCertificateResponse.html  struct.ListCertificatesRequest.html  struct.ListCertificatesResponse.html  struct.ListTagsForCertificateRequest.html  struct.ListTagsForCertificateResponse.html  struct.RemoveTagsFromCertificateRequest.html  struct.RequestCertificateRequest.html  struct.RequestCertificateResponse.html  struct.ResendValidationEmailRequest.html  struct.Tag.html  type.Arn.html  type.CertificateBody.html  type.CertificateBodyBlob.html  type.CertificateChain.html  type.CertificateChainBlob.html  type.CertificateStatus.html  (+20 more)
rusoto/autoscaling/: enum.AttachInstancesError.html  enum.AttachLoadBalancerTargetGroupsError.html  enum.AttachLoadBalancersError.html  enum.CompleteLifecycleActionError.html  enum.CreateAutoScalingGroupError.html  enum.CreateLaunchConfigurationError.html  enum.CreateOrUpdateTagsError.html  enum.DeleteAutoScalingGroupError.html  enum.DeleteLaunchConfigurationError.html  enum.DeleteLifecycleHookError.html  enum.DeleteNotificationConfigurationError.html  enum.DeletePolicyError.html  enum.DeleteScheduledActionError.html  enum.DeleteTagsError.html  enum.DescribeAccountLimitsError.html  enum.DescribeAdjustmentTypesError.html  enum.DescribeAutoScalingGroupsError.html  enum.DescribeAutoScalingInstancesError.html  enum.DescribeAutoScalingNotificationTypesError.html  enum.DescribeLaunchConfigurationsError.html  enum.DescribeLifecycleHookTypesError.html  enum.DescribeLifecycleHooksError.html  enum.DescribeLoadBalancerTargetGroupsError.html  enum.DescribeLoadBalancersError.html  enum.DescribeMetricCollectionTypesError.html  enum.DescribeNotificationConfigurationsError.html  enum.DescribePoliciesError.html  enum.DescribeScalingActivitiesError.html  enum.DescribeScalingProcessTypesError.html  enum.DescribeScheduledActionsError.html  enum.DescribeTagsError.html  enum.DescribeTerminationPolicyTypesError.html  enum.DetachInstancesError.html  enum.DetachLoadBalancerTargetGroupsError.html  enum.DetachLoadBalancersError.html  enum.DisableMetricsCollectionError.html  enum.EnableMetricsCollectionError.html  enum.EnterStandbyError.html  enum.ExecutePolicyError.html  enum.ExitStandbyError.html  (+213 more)
rusoto/claims/: constant.AUDIENCE.html  constant.ISSUER.html  constant.SUBJECT.html  index.html
rusoto/cloudformation/: enum.CancelUpdateStackError.html  enum.ContinueUpdateRollbackError.html  enum.CreateChangeSetError.html  enum.CreateStackError.html  enum.DeleteChangeSetError.html  enum.DeleteStackError.html  enum.DescribeAccountLimitsError.html  enum.DescribeChangeSetError.html  enum.DescribeStackEventsError.html  enum.DescribeStackResourceError.html  enum.DescribeStackResourcesError.html  enum.DescribeStacksError.html  enum.EstimateTemplateCostError.html  enum.ExecuteChangeSetError.html  enum.GetStackPolicyError.html  enum.GetTemplateError.html  enum.GetTemplateSummaryError.html  enum.ListChangeSetsError.html  enum.ListExportsError.html  enum.ListImportsError.html  enum.ListStackResourcesError.html  enum.ListStacksError.html  enum.SetStackPolicyError.html  enum.SignalResourceError.html  enum.UpdateStackError.html  enum.ValidateTemplateError.html  index.html  sidebar-items.js  struct.AccountLimit.html  struct.CancelUpdateStackInput.html  struct.Change.html  struct.ChangeSetSummary.html  struct.CloudFormationClient.html  struct.ContinueUpdateRollbackInput.html  struct.CreateChangeSetInput.html  (+159 more)
rusoto_core/: Cargo.toml  build.rs
rusoto_core/src/: lib.rs  mock.rs  request.rs
rusoto_credential/: index.html  sidebar-items.js  struct.AwsCredentials.html  struct.BaseAutoRefreshingProvider.html  struct.ChainProvider.html  struct.ContainerProvider.html  struct.CredentialsError.html  struct.EnvironmentProvider.html  struct.InstanceMetadataProvider.html  struct.ProfileProvider.html  trait.ProvideAwsCredentials.html  type.AutoRefreshingProvider.html  type.AutoRefreshingProviderSync.html  type.DefaultCredentialsProvider.html  type.DefaultCredentialsProviderSync.html
services/acm/: Cargo.toml
services/acm/src/: acm.rs  lib.rs
services/sqs/: Cargo.toml  build.rs
services/sqs/src/: lib.rs  sqs.rs
src/: botocore.rs  lib.rs  main.rs  mock.rs  request.rs  s3.rs  signature.rs  sqs.rs  sts.rs
tests/: sts.rs
(+10823 files in other folders)
