[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
build = "build.rs"
description = "AWS SDK for Rust"
documentation = "http://rusoto.github.io/rusoto/rusoto/index.html"
exclude = [".gitignore", ".travis.yml", "docgen.sh", "helpers/**/*", "codegen/**/*"]
keywords = ["AWS", "Amazon"]
license = "MIT"
name = "rusoto"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.22.0"

[build-dependencies]
env_logger = "0.4.0"
rustc_version = "0.1.7"
rayon = "0.6.0"

[build-dependencies.rusoto_codegen]
default-features = false
path = "codegen"
version = ">= 0.6.0"

[dependencies]
log = "0.3.6"
md5 = "0.3.2"
regex = "0.2.1"
serde_json = "0.8.0"
chrono = "0.2.21"
hyper = "0.10.0"

[dependencies.clippy]
optional = true
version = "0.0"

[dependencies.serde_codegen]
optional = true
version = "0.8.0"

[dependencies.serde_derive]
optional = true
version = "0.8.19"

[dev-dependencies]
env_logger = "0.4.0"
rand = "^0.3.14"

[workspace]
members = [
	"services/acm",
	"services/sqs",
	"rusoto_core"
]

[features]
all = [
		"acm",
	   	"autoscaling",
	   	"cloudformation",
	   	"cloudfront",
	   	"cloudhsm",
	   	"cloudsearch",
	   	"cloudtrail",
	   	"cloudwatch",
	   	"codecommit",
	   	"codedeploy",
	   	"codepipeline",
	   	"cognito-identity",
	   	"config",
	   	"datapipeline",
	   	"devicefarm",
	   	"directconnect",
	   	"ds",
	   	"dynamodb",
	   	"dynamodbstreams",
	   	"ec2",
	   	"ecr",
	   	"ecs",
	   	"elasticache",
	   	"elasticbeanstalk",
	   	"elastictranscoder",
	   	"elb",
	   	"elbv2",
	   	"emr",
	   	"events",
	   	"firehose",
	   	"iam",
	   	"importexport",
	   	"inspector",
	   	"iot",
	   	"kinesis",
	   	"kms",
	   	"lambda",
	   	"logs",
	   	"machinelearning",
	   	"marketplacecommerceanalytics",
	   	"opsworks",
	   	"redshift",
	   	"rds",
	   	"route53",
	   	"route53domains",
	   	"s3",
	   	"sdb",
	   	"sns",
	   	"sqs",
	   	"ssm",
	   	"storagegateway",
	   	"swf",
	   	"waf",
	   	"workspaces"
	]
acm = []
autoscaling = []
cloudformation = []
cloudfront = []
cloudhsm = []
cloudsearch = []
cloudtrail = []
cloudwatch = []
codecommit = []
codedeploy = []
codepipeline = []
cognito-identity = []
config = []
datapipeline = []
default = ["rusoto_codegen/serde_codegen", "serde_codegen"]
devicefarm = []
directconnect = []
ds = []
dynamodb = []
dynamodbstreams = []
ec2 = []
ecr = []
ecs = []
elasticache = []
elasticbeanstalk = []
elastictranscoder = []
elb = []
elbv2 = []
emr = []
events = []
firehose = []
iam = []
importexport = []
inspector = []
iot = []
kinesis = []
kms = []
lambda = []
logs = []
machinelearning = []
marketplacecommerceanalytics = []
nightly-testing = ["clippy", "rusoto_codegen/nightly-testing",  "unstable"]
opsworks = []
redshift = []
rds = []
route53 = []
route53domains = []
s3 = []
sdb = []
sns = []
sqs = []
ssm = []
storagegateway = []
swf = []
unstable = ["rusoto_codegen/unstable", "serde_derive"]
waf = []
workspaces = []
