[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]

description = "AWS SQS"
documentation = "http://rusoto.github.io/rusoto/rusoto/index.html"
keywords = ["AWS", "Amazon"]
license = "MIT"
name = "rusoto_sqs"
repository = "https://github.com/rusoto/rusoto"
version = "0.22.0"

[dependencies]
hyper = "0.10.0"
hyper-native-tls = "0.2.1"
xml-rs = "0.3"

[dependencies.rusoto_core]
path = "../../rusoto_core"
version = "0.22.0"

[dependencies.rusoto_credential]
path = "../../credential"
version = "0.4.0"